--- a/test/cypress.env.json.template
+++ b/test/cypress.env.json.template
@@ -5,5 +5,6 @@
   "username": "admin",
   "password": "admin",
   "containers": "localhost:5001",
-  "galaxykit": "galaxykit --ignore-certs"
+  "galaxykit": "galaxykit --ignore-certs",
+  "insightsLogin": false
 }
