pr-checks - webpack: ignore different counts of "Waiting for rbac_postgres" (#3138)
No-Issue

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -128,6 +128,7 @@ jobs:
                 -e 's/"UI_COMMIT_HASH": ".*"/"UI_COMMIT_HASH": "HASH"/' |
               perl -ne 'print unless /^[0-9a-f]{64,64}$/d' |
               grep -v '^Current branch:' |
+              grep -v '^Waiting for ' |
               grep -v '^Root folder:' > ~/webpack-config/"$version"/"$file".json
           done
 
