Make collections list test faster (#3146)
No-Issue

--- a/test/cypress.env.json.template
+++ b/test/cypress.env.json.template
@@ -1,3 +1,4 @@
+// Standalone
 {
   "apiPrefix": "/api/automation-hub/",
   "pulpPrefix": "/api/automation-hub/pulp/api/v3/",
@@ -7,4 +8,16 @@
   "containers": "localhost:5001",
   "galaxykit": "galaxykit --ignore-certs",
   "insightsLogin": false
+}
+
+
+// Insights
+{
+  "apiPrefix": "/api/automation-hub/",
+  "pulpPrefix": "/api/automation-hub/pulp/api/v3/",
+  "uiPrefix": "/beta/ansible/automation-hub/",
+  "username": "admin",
+  "password": "admin",
+  "galaxykit": "galaxykit --ignore-certs --auth-url 'http://localhost:8002/auth/realms/redhat-external/protocol/openid-connect/token'",
+  "insightsLogin" : true
 }
