--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@types/node": "^16.18.11",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.2",
-        "@types/react-router-dom": "^5.3.3",
         "axios": "~1.2.2",
         "classnames": "^2.3.2",
         "csstype": "^3.1.1",
@@ -23,16 +22,11 @@
         "file-saver": "^2.0.5",
         "js-cookie": "^3.0.1",
         "moment": "^2.29.4",
-        "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-markdown": "^8.0.4",
-        "react-redux": "^8.0.5",
-        "react-router-dom": "^5.3.4",
-        "react-router-hash-link": "^2.4.3",
-        "redux": "^4.2.0",
-        "redux-logger": "^3.0.6",
-        "redux-promise-middleware": "^6.1.3"
+        "react-router-dom": "^6.6.1",
+        "react-router-hash-link": "^2.4.3"
     },
     "devDependencies": {
         "@babel/core": "^7.20.12",
