Clean up more old code (#3176)
* Clean up more old code

No-Issue

* fix unused exports - unexport when alive, delete when dead

and moved role-management utils from containers to utilities
and fixed previously missed relative imports from src/thing

* split global-variables

trying to minimize relationships between css pieces

* update README for community, start-insights

* start-insights on ci

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -170,7 +170,7 @@ jobs:
         grep jboss/keycloak "$FROM"/default/chrome.js
         docker pull jboss/keycloak
 
-        npm run start &
+        npm run start-insights &
 
     - name: "Install Cypress & test dependencies"
       working-directory: 'ansible-hub-ui/test'
