Collections tests for insights mode (#3170)
* Collections tests for insights mode
Issue: AAH-2054

* folder into workflow matrix

* Collection detail test

* collection test

* Make insights mode in workflows for any matrix starts with insights

* Collection upload test

* Workflows for insights - correction of expression of starts with insights

* Check collection upload for standalone

* Better selector than main

* Better standalone/insights expression in workflow

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -34,6 +34,7 @@ jobs:
         - 'groups_and_users'
         - 'imports'
         - 'insights'
+        - 'insights_collections'
         - 'misc'
         - 'namespaces'
         - 'repo'
@@ -50,7 +51,17 @@ jobs:
     - name: "Set env.SHORT_BRANCH, COMPOSE_PROFILE"
       run: |
         SHORT_BRANCH=`sed 's/^refs\/heads\///' <<< $BRANCH`
-        COMPOSE_PROFILE=`[ "${{ matrix.test }}" = 'insights' ] && echo 'insights' || echo 'standalone'`
+
+        case "${{ matrix.test }}" in
+          insights*)
+            COMPOSE_PROFILE=insights
+            echo "insights"
+            ;;
+          *)
+            COMPOSE_PROFILE=standalone
+            echo "standalone"
+            ;;
+        esac
 
         echo "SHORT_BRANCH=${SHORT_BRANCH}" >> $GITHUB_ENV
         echo "COMPOSE_PROFILE=${COMPOSE_PROFILE}" >> $GITHUB_ENV
