--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,7 +31,7 @@ updates:
     directory: '/'
     target-branch: 'stable-4.5'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
     commit-message:
       prefix: '[stable-4.5] '
     ignore:
@@ -98,7 +98,7 @@ updates:
     commit-message:
       prefix: '[stable-4.5] '
     schedule:
-      interval: "weekly"
+      interval: "monthly"
 
   - package-ecosystem: "github-actions"
     directory: "/"
