Repair insights tests (#3324)
* Repair smoke test

* Collection list quick fix
No-Issue

--- a/test/cypress.env.json.template
+++ b/test/cypress.env.json.template
@@ -19,5 +19,6 @@
   "username": "admin",
   "password": "admin",
   "galaxykit": "galaxykit --ignore-certs --auth-url 'http://localhost:8002/auth/realms/redhat-external/protocol/openid-connect/token'",
+  "disableRepoSwitch" : true,
   "insightsLogin" : true
 }
