--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,9 +2,6 @@
   "extends": "stylelint-config-standard-scss",
   "rules": {
     "custom-property-pattern": "^([a-z][a-z0-9]*)(-+[a-zA-Z0-9_]+)*$",
-    "declaration-colon-newline-after": null,
-    "scss/at-import-partial-extension": null,
-    "selector-class-pattern": null,
-    "string-quotes": "single"
+    "selector-class-pattern": null
   }
 }
