--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "eslint": "^8.34.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-react": "^7.32.2",
+        "html-webpack-plugin": "^5.5.0",
         "husky": "^4.3.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
