Remotes - YAML editor (#3432)
* use react-monaco-editor in remote-form

Issue: AAH-2044

* actual patternfly code editor

* wrap in expandable section

* add yaml template, Use template / Start from scratch buttons

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@babel/runtime": "^7.21.0",
         "@lingui/react": "^3.17.2",
         "@patternfly/patternfly": "^4.224.2",
+        "@patternfly/react-code-editor": "^4.82.115",
         "@patternfly/react-core": "^4.276.6",
         "@patternfly/react-table": "^4.112.39",
         "@redhat-cloud-services/frontend-components": "^3.9.33",
@@ -21,9 +22,12 @@
         "file-saver": "^2.0.5",
         "js-cookie": "^3.0.1",
         "moment": "^2.29.4",
+        "monaco-editor": "^0.34.1",
+        "monaco-yaml": "^4.0.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-markdown": "^8.0.5",
+        "react-monaco-editor": "^0.51.0",
         "react-router-dom": "^6.9.0",
         "react-router-hash-link": "^2.4.3"
     },
@@ -50,6 +54,7 @@
         "eslint-plugin-react": "^7.32.2",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^4.3.0",
+        "monaco-editor-webpack-plugin": "^7.0.1",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
